test/corpus/not.txt
================================================================================
not (!)
================================================================================
fn fib(n : Int) -> Int {
  if !n {
    println("a")
  }
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (parameters
      (parameter
        (positional_parameter
          (lowercase_identifier)
          (type_annotation
            (qualified_type_identifier
              (identifier
                (uppercase_identifier)))))))
    (return_type
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (block_expression
      (if_expression
        (unary_expression
          (qualified_identifier
            (lowercase_identifier)))
        (block_expression
          (apply_expression
            (qualified_identifier
              (lowercase_identifier))
            (arguments
              (argument
                (atomic_expression
                  (literal
                    (string_literal
                      (string_fragment
                        (unescaped_string_fragment)))))))))))))
