test/corpus/struct_constructor.txt
================================================================================
struct constructor declaration
================================================================================
pub struct Command {
  fn new(
    String,
    args? : Array[&ArgLike],
    subcommands? : Array[Command],
    about? : String,
    long_about? : String,
    version? : String,
    long_version? : String,
    aliases? : Array[String],
    visible_aliases? : Array[String],
    disable_help_flag? : Bool,
    disable_version_flag? : Bool,
    disable_help_subcommand? : Bool,
    arg_required_else_help? : Bool,
    subcommand_required? : Bool,
    hidden? : Bool,
    groups? : Array[ArgGroup]
  ) -> Command
}
--------------------------------------------------------------------------------

(structure
  (struct_definition
    (visibility)
    (identifier
      (uppercase_identifier))
    (struct_constructor_declaration
      (lowercase_identifier)
      (parameters
        (parameter
          (qualified_type_identifier
            (identifier
              (uppercase_identifier))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (type_arguments
                  (trait_object_type
                    (qualified_type_identifier
                      (identifier
                        (uppercase_identifier)))))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (type_arguments
                  (qualified_type_identifier
                    (identifier
                      (uppercase_identifier))))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (type_arguments
                  (qualified_type_identifier
                    (identifier
                      (uppercase_identifier))))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (type_arguments
                  (qualified_type_identifier
                    (identifier
                      (uppercase_identifier))))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier))))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (apply_type
                (qualified_type_identifier
                  (identifier
                    (uppercase_identifier)))
                (type_arguments
                  (qualified_type_identifier
                    (identifier
                      (uppercase_identifier)))))))))
      (return_type
        (qualified_type_identifier
          (identifier
            (uppercase_identifier)))))))

================================================================================
struct fields with constructor
================================================================================
struct Point {
  x: Int
  y: Int
  fn new(Int, y? : Int) -> Point
}
--------------------------------------------------------------------------------

(structure
  (struct_definition
    (identifier
      (uppercase_identifier))
    (struct_field_declaration
      (lowercase_identifier)
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (struct_field_declaration
      (lowercase_identifier)
      (qualified_type_identifier
        (identifier
          (uppercase_identifier))))
    (struct_constructor_declaration
      (lowercase_identifier)
      (parameters
        (parameter
          (qualified_type_identifier
            (identifier
              (uppercase_identifier))))
        (parameter
          (optional_parameter
            (optional_label
              (lowercase_identifier))
            (type_annotation
              (qualified_type_identifier
                (identifier
                  (uppercase_identifier)))))))
      (return_type
        (qualified_type_identifier
          (identifier
            (uppercase_identifier)))))))
