test/corpus/structures.txt
================================================================================
dot
================================================================================
fn init {
  [1, 2, 3]
  [1, 2,
  3, 4
  ]
}
--------------------------------------------------------------------------------

(structure
  (function_definition
    (function_identifier
      (lowercase_identifier))
    (block_expression
      (array_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon))
      (array_expression
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal)))
        (atomic_expression
          (literal
            (integer_literal))))
      (semicolon
        (automatic_semicolon)))))
