test/corpus/traitalias.txt
================================================================================
traitalias
================================================================================
traitalias @quickcheck.Arbitrary
--------------------------------------------------------------------------------

(structure
  (structure_item
    (trait_alias_definition
      (qualified_type_identifier
        (package_identifier)
        (dot_identifier
          (dot_uppercase_identifier))))))
