test/corpus/unwrap.txt
================================================================================
unwrap
================================================================================
fn init {
  let x = f()?
  let y = x?
  let z = None?
  let a = Option::Some(3)?
  let b = -3?
}
--------------------------------------------------------------------------------

(structure
  (structure_item
    (function_definition
      (function_identifier
        (lowercase_identifier))
      (block_expression
        (statement_expression
          (let_expression
            (pattern
              (simple_pattern
                (lowercase_identifier)))
            (expression
              (simple_expression
                (unwrap_expression
                  (simple_expression
                    (apply_expression
                      (simple_expression
                        (qualified_identifier
                          (lowercase_identifier))))))))))
        (statement_expression
          (let_expression
            (pattern
              (simple_pattern
                (lowercase_identifier)))
            (expression
              (simple_expression
                (unwrap_expression
                  (simple_expression
                    (qualified_identifier
                      (lowercase_identifier))))))))
        (statement_expression
          (let_expression
            (pattern
              (simple_pattern
                (lowercase_identifier)))
            (expression
              (simple_expression
                (unwrap_expression
                  (simple_expression
                    (constructor_expression
                      (uppercase_identifier))))))))
        (statement_expression
          (let_expression
            (pattern
              (simple_pattern
                (lowercase_identifier)))
            (expression
              (simple_expression
                (unwrap_expression
                  (simple_expression
                    (apply_expression
                      (simple_expression
                        (constructor_expression
                          (qualified_type_identifier
                            (identifier
                              (uppercase_identifier)))
                          (uppercase_identifier)))
                      (expression
                        (simple_expression
                          (atomic_expression
                            (literal
                              (integer_literal))))))))))))
        (statement_expression
          (let_expression
            (pattern
              (simple_pattern
                (lowercase_identifier)))
            (expression
              (simple_expression
                (unary_expression
                  (expression
                    (simple_expression
                      (unwrap_expression
                        (simple_expression
                          (atomic_expression
                            (literal
                              (integer_literal))))))))))))))))
